adding experiences and remove teaching

--- a/_pages/experience.html
+++ b/_pages/experience.html
@@ -8,7 +8,7 @@ author_profile: true
 <div class="experience-list">
   {% for exp in site.experience reversed %}
     <div style="margin-bottom: 2rem;">
-      <h3 style="margin-bottom: 0;">{{ exp.title }}</h3>
+      <h2 style="margin-bottom: 0; font-size: 1.6em; font-weight: 600;">{{ exp.title }}</h2>
       {% if exp.role %}
         <p style="margin: 0;"><em>{{ exp.role }}</em></p>
       {% endif %}
