--- a/_pages/experience.html
+++ b/_pages/experience.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 <div class="experience-list">
-  {% for exp in site.experience reversed %}
+  {% for exp in site.experience %}
     <div style="margin-bottom: 2rem;">
       <h2 style="margin-bottom: 0; font-size: 1.6em; font-weight: 600;">{{ exp.title }}</h2>
       {% if exp.role %}
